--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             // callback function that will receive the users
             function getUsers(users){
                 $('#result').html( "<pre>" + users + "</pre>");
-                alert(users);
+//                alert(users);
             }
 
         </script>
